--- a/html/criar-conta-paciente.html
+++ b/html/criar-conta-paciente.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DocLine - Nova conta paciente</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/body.css">
+    <link rel="stylesheet" href="../css/Styles/criar-conta-paciente.css">
     <link rel="stylesheet" href="./js/script.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,30 +13,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,700&family=Rubik:ital,wght@0,300..900;1,300..900&family=Secular+One&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="quadrado-branco-nova-conta"></div>
+    <div class="quadrado-branco"></div>
     <div class="container">
         </div>
-        <div class="portal-text-cadastro">
+        <div class="portal-text">
             <h1>Cadastro Paciente</h1>
         </div>
-        <div class="login-form2">
+        <div class="campos">
             <input class="campo-nome" type="text" placeholder="Nome Completo:">
             <input class="campo-cpf" type="number" placeholder="CPF:">
             <input class="campo-end" type="text" placeholder="Endereço:">
             <input class="campo-mail" type="email" placeholder="E-mail:">
-            <input class="campo-req" type="text" placeholder="Comorbidades:">
-            <input class="campo-cert" type="text" placeholder="Alergias:">
+            <input class="campo-como" type="text" placeholder="Comorbidades:">
+            <input class="campo-alerg" type="text" placeholder="Alergias:">
             <input class="campo-senha" type="password" placeholder="Senha:">
             <input class="campo-confirmar-senha" type="password" placeholder="Confirmar senha:">
-            <input class="campo-esp" type="text" placeholder="Nome da Mãe:">
+            <input class="campo-nome-mae" type="text" placeholder="Nome da Mãe:">
             <input class="campo-contato" type="tel" placeholder="Contato:">
             <input class="campo-data" type="date" placeholder="Nascimento:">
-            <input class="campo-crm" type="number" placeholder="Tipagem Sanguínea:">
+            <input class="campo-tip" type="number" placeholder="Tipagem Sanguínea:">
             <a href="./login-paciente.html" class="button new">Criar conta</a>
-            <div class="campo-data3">Data de nascimento</div>
+            <div class="campo-data2">Data de nascimento</div>
         </div>
     </div>
-    <div class="logo-nova-conta">
+    <div class="logo">
         <img src="../images/logo.png" alt="">
     </div>
 </body>
