--- a/html/login-paciente.html
+++ b/html/login-paciente.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DocLine - Portal de Agendamento</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <title>DocLine - Login de Agendamento</title>
+    <link rel="stylesheet" href="../css/body.css">
+    <link rel="stylesheet" href="../css/Styles/login-paciente.css">
     <link rel="stylesheet" href="./js/script.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,700&family=Rubik:ital,wght@0,300..900;1,300..900&family=Secular+One&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="quadrado-branco-medico-paciente"></div>
+    <div class="quadrado-branco"></div>
     <div class="linha-cinza"></div>
     <div class="container">
         </div>
@@ -22,7 +23,7 @@
         <div class="login-form">
             <input class="campo" type="text" placeholder="Usuário">
             <input class="campo"type="password" placeholder="Senha">
-            <button class="button-entrar">Entrar</button>
+            <a href="./tala-paciente-medicos.html" class="button-entrar">Entrar</a>
             <a href="./recuperar-senha.html">Esqueceu a senha?</a>
             <a href="./criar-conta-paciente.html" class="button new-account">Criar nova conta</a>
         </div>
