--- a/html/recuperar-senha.html
+++ b/html/recuperar-senha.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DocLine - Recuperar senha</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/body.css">
+    <link rel="stylesheet" href="../css/Styles/recuperar-senha.css">
     <link rel="stylesheet" href="./js/script.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +14,7 @@
 </head>
 <body>
     <div class="quadrado-branco"></div>
-    <div class="linha-cinza2"></div>
+    <div class="linha-cinza"></div>
     <div class="container">
         </div>
         <div class="portal-text">
