--- a/html/criar-conta-medico.html
+++ b/html/criar-conta-medico.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DocLine - Nova conta médico</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/body.css">
+    <link rel="stylesheet" href="../css/Styles/criar-conta-medico.css">
     <link rel="stylesheet" href="./js/script.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,13 +13,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,700&family=Rubik:ital,wght@0,300..900;1,300..900&family=Secular+One&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="quadrado-branco-nova-conta"></div>
+    <div class="quadrado-branco"></div>
     <div class="container">
         </div>
-        <div class="portal-text-cadastro">
+        <div class="portal-text">
             <h1>Cadastro Médico</h1>
         </div>
-        <div class="login-form2">
+        <div class="campos">
             <input class="campo-nome" type="text" placeholder="Nome Completo:">
             <input class="campo-cpf" type="number" placeholder="CPF:">
             <input class="campo-end" type="text" placeholder="Endereço do Consultorio:">
@@ -36,7 +37,7 @@
             <div class="campo-data2">Data de nascimento</div>
         </div>
     </div>
-    <div class="logo-nova-conta">
+    <div class="logo">
         <img src="../images/logo.png" alt="">
     </div>
 </body>
