--- a/html/recuperar-senha-2.html
+++ b/html/recuperar-senha-2.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DocLine - Recuperar senha digite o código</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/body.css">
+    <link rel="stylesheet" href="../css/Styles/recuperar-senha-2.css">
     <link rel="stylesheet" href="./js/script.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,8 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,700&family=Rubik:ital,wght@0,300..900;1,300..900&family=Secular+One&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="quadrado-branco-senha"></div>
-    <div class="linha-cinza2"></div>
+    <div class="quadrado-branco"></div>
+    <div class="linha-cinza"></div>
     <div class="container">
         </div>
         <div class="portal-text">
