--- a/html/criar-conta-profissional.html
+++ b/html/criar-conta-profissional.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DocLine - Nova conta médico</title>
+    <title>DocLine - Nova conta profissional</title>
     <link rel="stylesheet" href="../css/body.css">
-    <link rel="stylesheet" href="../css/Styles/criar-conta-medico.css">
+    <link rel="stylesheet" href="../css/Styles/criar-conta-profissional.css">
     <link rel="stylesheet" href="./js/script.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
     <div class="container">
         </div>
         <div class="portal-text">
-            <h1>Cadastro Médico</h1>
+            <h1>Cadastro Profissional</h1>
         </div>
         <div class="campos">
             <input class="campo-nome" type="text" placeholder="Nome Completo:">
@@ -32,7 +32,7 @@
             <input class="campo-contato" type="tel" placeholder="Contato:">
             <input class="campo-data" type="date" placeholder="Nascimento:">
             <input class="campo-crm" type="number" placeholder="CRM:">
-            <a href="./login-medico.html" class="button new">Criar conta</a>
+            <a href="./login-profissional.html" class="button new">Criar conta</a>
             <div class="campo-cert2">Certificados</div>
             <div class="campo-data2">Data de nascimento</div>
         </div>
