--- a/html/recuperar-senha.html
+++ b/html/recuperar-senha.html
@@ -19,11 +19,11 @@
         </div>
         <div class="portal-text">
             <h1>RECUPERAÇÃO DE SENHA</h2>
-            <h2>Digite seu e-mail para receber <br>o código de alteração de senha
+            <h2>Digite seu e-mail ou numero de <br>telefone para receber o código <br>de alteração de senha
             </h3>
         </div>
         <div class="login-form">
-            <input class="campo email" type="text" placeholder="E-mail">
+            <input class="campo email" type="text" placeholder="E-mail ou celular">
             <a href="./recuperar-senha-2.html" class="button-enviar-codigo">Enviar Código</a>
         </div>
     </div>
