--- a/html/tala-paciente-endereco.html
+++ b/html/tala-paciente-endereco.html
@@ -27,7 +27,7 @@
     <div class="container">
         </div>
         <div class="cabecalho-text">
-            <a href="./tala-paciente-medicos.html"><h1>Médicos</h1></a>
+            <a href="./tala-paciente-profissional.html"><h1>Profissionais</h1></a>
             <span>  </span>
             <a href="./tala-paciente-endereco.html"><h1>Endereço</h1></a>
             <span>  </span>
