--- a/html/tala-paciente-profissional.html
+++ b/html/tala-paciente-profissional.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DocLine - Portal do Paciente - Médicos</title>
     <link rel="stylesheet" href="../css/body.css">
-    <link rel="stylesheet" href="../css/Styles/tela-paciente-medicos.css">
+    <link rel="stylesheet" href="../css/Styles/tela-paciente-profissional.css">
     <link rel="stylesheet" href="./js/script.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,7 +42,7 @@
     <div class="container">
         </div>
         <div class="cabecalho-text">
-            <a href="./tala-paciente-medicos.html"><h1>Médicos</h1></a>
+            <a href="./tala-paciente-profissional.html"><h1>Profissionais</h1></a>
             <span>  </span>
             <a href="./tala-paciente-endereco.html"><h1>Endereço</h1></a>
             <span>  </span>
@@ -56,7 +56,7 @@
         <div class="quadrado-cinza-1"></div>
         <div class="dec-md-1"><h3>Faculdade de Medicina: Universidade Estadual de Porto alegre, graduada em 2004 com Honras Médicas. Atuou nos Hospitais: Unimed de Novo Hamburgo e Regina de Novo Hamburgo.
         </h3></div>
-        <a href="https://www.exemplo.com" class="agenda-1">
+        <a href="./agendamento-md-1.html" class="agenda-1">
             <img src="../images/relogio.png" alt="Agenda Médico 1">
         </a>
         <div class="nome-medico-2"><h2>Dr. Albano</h2></div>
@@ -66,7 +66,7 @@
         <div class="rqe-2"><h1>RQE: 8945</h1></div>
         <div class="quadrado-cinza-2"></div>
         <div class="dec-md-2"><h3>Faculdade de Medicina: Universidade Estadual de Porto alegre, graduada em 2004 com Honras Médicas. Atuou nos Hospitais: Unimed de Novo Hamburgo e Regina de Novo Hamburgo.</h3></div>
-        <a href="https://www.exemplo.com" class="agenda-2">
+        <a href="./agendamento-md-1.html" class="agenda-2">
             <img src="../images/relogio.png" alt="Agenda Médico 2">
         </a>
         <div class="nome-medico-3"><h2>Dr. Lucas</h2></div>
@@ -76,7 +76,7 @@
         <div class="rqe-3"><h1>RQE: 6541</h1></div>
         <div class="quadrado-cinza-3"></div>
         <div class="dec-md-3"><h3>Faculdade de Medicina: Universidade Estadual de Porto alegre, graduada em 2004 com Honras Médicas. Atuou nos Hospitais: Unimed de Novo Hamburgo e Regina de Novo Hamburgo.</h3></div>
-        <a href="https://www.exemplo.com" class="agenda-3">
+        <a href="./agendamento-md-1.html" class="agenda-3">
             <img src="../images/relogio.png" alt="Agenda Médico 3">
         </a>
         <div class="nome-medico-4"><h2>Dra. Ivanir</h2></div>
@@ -86,7 +86,7 @@
         <div class="rqe-4"><h1>RQE: 3574</h1></div>
         <div class="quadrado-cinza-4"></div>
         <div class="dec-md-4"><h3>Faculdade de Medicina: Universidade Estadual de Porto alegre, graduada em 2004 com Honras Médicas. Atuou nos Hospitais: Unimed de Novo Hamburgo e Regina de Novo Hamburgo.</h3></div>
-        <a href="https://www.exemplo.com" class="agenda-4">
+        <a href="./agendamento-md-1.html" class="agenda-4">
             <img src="../images/relogio.png" alt="Agenda Médico 4">
         </a>
     </div>
