--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>DocLine - Home</title>
     <link rel="stylesheet" href="./css/body.css">
     <link rel="stylesheet" href="./css/Styles/home.css">
-    <link rel="stylesheet" href="./js/script.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,700&family=Rubik:ital,wght@0,300..900;1,300..900&family=Secular+One&display=swap" rel="stylesheet">
@@ -19,7 +18,7 @@
             <h1>PORTAL DOCLINE</h1>
         </div>
         <div class="buttons">
-            <a href="./html/login-medico.html" class="button button-medico">Médico</a>
+            <a href="./html/login-profissional.html" class="button button-medico">Profissional</a>
             <span>ou</span>
             <a href="./html/login-paciente.html" class="button">Paciente</a>
         </div>
