--- a/html/pagamento.html
+++ b/html/pagamento.html
@@ -14,6 +14,36 @@
 </head>
 <link rel="stylesheet" href="">
 <body>
+    
+    <div id="menu" onclick="toggleMenu()">
+        <div class="usuario">
+            <img src="../images/img-usuario.png" alt="">
+        </div>
+    </div>
+    <div id="dropdownMenu" class="dropdown-content">
+        <a href="#">Perfil</a>
+        <a href="#">Adicionar Dependente</a>
+        <a href="../index.html">Sair</a>
+    </div>
+    <script>
+        function toggleMenu() {
+            const menu = document.getElementById("dropdownMenu");
+            menu.style.display = menu.style.display === "block" ? "none" : "block";
+        }
+
+        // Fecha o menu se o usuário clicar fora dele
+        window.onclick = function(event) {
+            if (!event.target.matches('#menu') && !event.target.matches('.usuario img')) {
+                const dropdowns = document.getElementsByClassName("dropdown-content");
+                for (let i = 0; i < dropdowns.length; i++) {
+                    const openDropdown = dropdowns[i];
+                    if (openDropdown.style.display === "block") {
+                        openDropdown.style.display = "none";
+                    }
+                }
+            }
+        }
+    </script>
     <div class="quadrado-branco"></div>
     <div class="container">
         </div>
@@ -49,9 +79,9 @@
             <h1>R$150,00</h1>
         </div>
     </div>
-    <div class="logo">
-        <img src="../images/logo.png" alt="">
-    </div>
+    <a href="../index.html" class="logo">
+        <img src="../images/logo.png" alt="logo">
+    </a>
     <script>
         document.getElementById('plano-link').addEventListener('click', function() {
             // Cria um elemento de fundo escuro para bloquear o restante da interface
