--- a/html/recuperar-senha-2.html
+++ b/html/recuperar-senha-2.html
@@ -30,8 +30,8 @@
             <a href="../index.html" class="button-codigo">Confirmar</a>
         </div>
     </div>
-    <div class="logo">
-        <img src="../images/logo.png" alt="">
-    </div>
+    <a href="../index.html" class="logo">
+        <img src="../images/logo.png" alt="logo">
+    </a>
 </body>
 </html>
