--- a/html/recuperar-senha.html
+++ b/html/recuperar-senha.html
@@ -27,8 +27,8 @@
             <a href="./recuperar-senha-2.html" class="button-enviar-codigo">Enviar Código</a>
         </div>
     </div>
-    <div class="logo">
-        <img src="../images/logo.png" alt="">
-    </div>
+    <a href="../index.html" class="logo">
+        <img src="../images/logo.png" alt="logo">
+    </a>
 </body>
 </html>
