--- a/html/tala-paciente-profissional.html
+++ b/html/tala-paciente-profissional.html
@@ -3,19 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DocLine - Portal do Paciente - Médicos</title>
+    <title>DocLine - Portal do Paciente - Profissionais</title>
     <link rel="stylesheet" href="../css/body.css">
     <link rel="stylesheet" href="../css/Styles/tela-paciente-profissional.css">
-    <link rel="stylesheet" href="./js/script.js">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,700&family=Rubik:ital,wght@0,300..900;1,300..900&family=Secular+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Rubik:wght@300..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="logo">
-        <img src="../images/logo.png" alt="">
+    <a href="../index.html" class="logo">
+        <img src="../images/logo.png" alt="logo">
+    </a>
+    <div id="menu" onclick="toggleMenu()">
+        <div class="usuario">
+            <img src="../images/img-usuario.png" alt="">
+        </div>
     </div>
+    <div id="dropdownMenu" class="dropdown-content">
+        <a href="#">Perfil</a>
+        <a href="#">Adicionar Dependente</a>
+        <a href="../index.html">Sair</a>
+    </div>
+    <script>
+        function toggleMenu() {
+            const menu = document.getElementById("dropdownMenu");
+            menu.style.display = menu.style.display === "block" ? "none" : "block";
+        }
+
+        // Fecha o menu se o usuário clicar fora dele
+        window.onclick = function(event) {
+            if (!event.target.matches('#menu') && !event.target.matches('.usuario img')) {
+                const dropdowns = document.getElementsByClassName("dropdown-content");
+                for (let i = 0; i < dropdowns.length; i++) {
+                    const openDropdown = dropdowns[i];
+                    if (openDropdown.style.display === "block") {
+                        openDropdown.style.display = "none";
+                    }
+                }
+            }
+        }
+    </script>
     <div class="quadrado-branco"></div>
     <div class="linha-cinza"></div>
     <div class="linha-cinza2"></div>
@@ -24,9 +51,9 @@
     <div class="img-clinica">
         <img src="../images/clinica.png" alt="">
     </div>
-    <div class="logo-clinica">
-        <img src="../images/logo-clinica.jpg" alt="">
-    </div>
+    <a href="./tala-paciente-sobre.html" class="logo-clinica">
+        <img src="../images/logo-clinica.jpg" alt="Logo Clinica">
+    </a>
     <div class="img-dr-1">
         <img src="../images/img-dr.png" alt="">
     </div>
@@ -90,6 +117,5 @@
             <img src="../images/relogio.png" alt="Agenda Médico 4">
         </a>
     </div>
-
 </body>
 </html>
