--- a/html/criar-conta-paciente.html
+++ b/html/criar-conta-paciente.html
@@ -44,11 +44,9 @@
                 <button id="confirm-selection" class="confirm-button">OK</button>
             </div>
         </div>
-    
-        <div class="logo">
-            <img src="../images/logo.png" alt="">
-        </div>
-    
+        <a href="../index.html" class="logo">
+            <img src="../images/logo.png" alt="logo">
+        </a>
         <script src="../js/script.js"></script>
 </body>
 </html>
