--- a/html/criar-conta-profissional.html
+++ b/html/criar-conta-profissional.html
@@ -37,8 +37,8 @@
             <div class="campo-data2">Data de nascimento</div>
         </div>
     </div>
-    <div class="logo">
-        <img src="../images/logo.png" alt="">
-    </div>
+    <a href="../index.html" class="logo">
+        <img src="../images/logo.png" alt="logo">
+    </a>
 </body>
 </html>
