--- a/html/login-paciente.html
+++ b/html/login-paciente.html
@@ -28,9 +28,9 @@
             <a href="./criar-conta-paciente.html" class="button new-account">Criar nova conta</a>
         </div>
     </div>
-    <div class="logo">
-        <img src="../images/logo.png" alt="">
-    </div>
+    <a href="../index.html" class="logo">
+        <img src="../images/logo.png" alt="logo">
+    </a>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // Seleciona os campos de input e o botão "Entrar"
