--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <a href="./html/login-paciente.html" class="button">Paciente</a>
         </div>
     </div>
-    <div class="logo">
-        <img src="./images/logo.png" alt="">
-    </div>
+    <a href="../index.html" class="logo">
+        <img src="../images/logo.png" alt="logo">
+    </a>
 </body>
 </html>
