--- a/html/agendamento-md-1.html
+++ b/html/agendamento-md-1.html
@@ -6,12 +6,9 @@
     <title>DocLine - Agendamento</title>
     <link rel="stylesheet" href="../css/body.css">
     <link rel="stylesheet" href="../css/Styles/agendamento-md-1.css">
-    <link rel="stylesheet" href="./js/script.js">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,700&family=Rubik:ital,wght@0,300..900;1,300..900&family=Secular+One&display=swap" rel="stylesheet">
-</head>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Rubik:wght@300..900&display=swap" rel="stylesheet">
 <body>
     <div id="menu" onclick="toggleMenu()">
         <div class="usuario">
@@ -19,8 +16,8 @@
         </div>
     </div>
     <div id="dropdownMenu" class="dropdown-content">
-        <a href="#">Perfil</a>
-        <a href="#">Adicionar Dependente</a>
+        <a href="./perfil-paciente.html">Perfil</a>
+        <a href="./adicionar-dependente.html">Adicionar Dependente</a>
         <a href="../index.html">Sair</a>
     </div>
     <script>
