--- a/html/criar-conta-paciente.html
+++ b/html/criar-conta-paciente.html
@@ -6,11 +6,9 @@
     <title>DocLine - Nova conta paciente</title>
     <link rel="stylesheet" href="../css/body.css">
     <link rel="stylesheet" href="../css/Styles/criar-conta-paciente.css">
-    <link rel="stylesheet" href="./js/script.js">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,700&family=Rubik:ital,wght@0,300..900;1,300..900&family=Secular+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Rubik:wght@300..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="quadrado-branco"></div>
