--- a/html/recuperar-senha-2.html
+++ b/html/recuperar-senha-2.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DocLine - Recuperar senha digite o código</title>
     <link rel="stylesheet" href="../css/body.css">
     <link rel="stylesheet" href="../css/Styles/recuperar-senha-2.css">
-    <link rel="stylesheet" href="./js/script.js">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,700&family=Rubik:ital,wght@0,300..900;1,300..900&family=Secular+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Rubik:wght@300..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <div class="quadrado-branco"></div>
     <div class="linha-cinza"></div>
     <div class="container">
-        </div>
-        <div class="portal-text">
-            <h1>RECUPERAÇÃO DE SENHA</h2>
+    </div>
+    <div class="portal-text">
+        <h1>RECUPERAÇÃO DE SENHA</h2>
             <h2>Digite o código</h3>
-        </div>
-        <div class="login-form">
-            <input class="campo email" type="text" placeholder="Código">
-            <span></span>
-            <input class="campo email" type="password" placeholder="Nova senha">
-            <span></span>          
-            <input class="campo email" type="password" placeholder="Confirme a senha">
-            <a href="../index.html" class="button-codigo">Confirmar</a>
-        </div>
+    </div>
+    <div class="login-form">
+        <input class="campo email" type="text" placeholder="Código">
+        <span></span>
+        <input class="campo email" type="password" placeholder="Nova senha">
+        <span></span>
+        <input class="campo email" type="password" placeholder="Confirme a senha">
+        <a href="../index.html" class="button-codigo">Confirmar</a>
+    </div>
     </div>
     <a href="../index.html" class="logo">
         <img src="../images/logo.png" alt="logo">
     </a>
 </body>
+
 </html>
