--- a/html/recuperar-senha.html
+++ b/html/recuperar-senha.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DocLine - Recuperar senha</title>
     <link rel="stylesheet" href="../css/body.css">
     <link rel="stylesheet" href="../css/Styles/recuperar-senha.css">
-    <link rel="stylesheet" href="./js/script.js">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,700&family=Rubik:ital,wght@0,300..900;1,300..900&family=Secular+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Rubik:wght@300..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <div class="quadrado-branco"></div>
     <div class="linha-cinza"></div>
     <div class="container">
-        </div>
-        <div class="portal-text">
-            <h1>RECUPERAÇÃO DE SENHA</h2>
+    </div>
+    <div class="portal-text">
+        <h1>RECUPERAÇÃO DE SENHA</h2>
             <h2>Digite seu e-mail ou numero de <br>telefone para receber o código <br>de alteração de senha
-            </h3>
-        </div>
-        <div class="login-form">
-            <input class="campo email" type="text" placeholder="E-mail ou celular">
-            <a href="./recuperar-senha-2.html" class="button-enviar-codigo">Enviar Código</a>
-        </div>
+                </h3>
+    </div>
+    <div class="login-form">
+        <input class="campo email" type="text" placeholder="E-mail ou celular">
+        <a href="./recuperar-senha-2.html" class="button-enviar-codigo">Enviar Código</a>
+    </div>
     </div>
     <a href="../index.html" class="logo">
         <img src="../images/logo.png" alt="logo">
     </a>
 </body>
+
 </html>
