--- a/html/criar-conta-profissional.html
+++ b/html/criar-conta-profissional.html
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DocLine - Nova conta profissional</title>
     <link rel="stylesheet" href="../css/body.css">
     <link rel="stylesheet" href="../css/Styles/criar-conta-profissional.css">
-    <link rel="stylesheet" href="./js/script.js">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,700&family=Rubik:ital,wght@0,300..900;1,300..900&family=Secular+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Rubik:wght@300..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <div class="quadrado-branco"></div>
     <div class="container">
-        </div>
-        <div class="portal-text">
-            <h1>Cadastro Profissional</h1>
-        </div>
-        <div class="campos">
-            <input class="campo-nome" type="text" placeholder="Nome Completo:">
-            <input class="campo-cpf" type="number" placeholder="CPF:">
-            <input class="campo-end" type="text" placeholder="Endereço do Consultorio:">
-            <input class="campo-mail" type="email" placeholder="E-mail:">
-            <input class="campo-req" type="number" placeholder="REQ:">
-            <input class="campo-cert" type="file"  placeholder="Certificados:">
-            <input class="campo-senha" type="password" placeholder="Senha:">
-            <input class="campo-confirmar-senha" type="password" placeholder="Confirmar senha:">
-            <input class="campo-esp" type="text" placeholder="Especialidades:">
-            <input class="campo-contato" type="tel" placeholder="Contato:">
-            <input class="campo-data" type="date" placeholder="Nascimento:">
-            <input class="campo-crm" type="number" placeholder="CRM:">
-            <a href="./login-profissional.html" class="button new">Criar conta</a>
-            <div class="campo-cert2">Certificados</div>
-            <div class="campo-data2">Data de nascimento</div>
-        </div>
+    </div>
+    <div class="portal-text">
+        <h1>Cadastro Profissional</h1>
+    </div>
+    <div class="campos">
+        <input class="campo-nome" type="text" placeholder="Nome Completo:">
+        <input class="campo-cpf" type="number" placeholder="CPF:">
+        <input class="campo-end" type="text" placeholder="Endereço do Consultorio:">
+        <input class="campo-mail" type="email" placeholder="E-mail:">
+        <input class="campo-req" type="number" placeholder="REQ:">
+        <input class="campo-cert" type="file" placeholder="Certificados:">
+        <input class="campo-senha" type="password" placeholder="Senha:">
+        <input class="campo-confirmar-senha" type="password" placeholder="Confirmar senha:">
+        <input class="campo-esp" type="text" placeholder="Especialidades:">
+        <input class="campo-contato" type="tel" placeholder="Contato:">
+        <input class="campo-data" type="date" placeholder="Nascimento:">
+        <input class="campo-crm" type="number" placeholder="CRM:">
+        <a href="./login-profissional.html" class="button new">Criar conta</a>
+        <div class="campo-cert2">Certificados</div>
+        <div class="campo-data2">Data de nascimento</div>
+    </div>
     </div>
     <a href="../index.html" class="logo">
         <img src="../images/logo.png" alt="logo">
     </a>
 </body>
+
 </html>
