--- a/html/tala-paciente-endereco.html
+++ b/html/tala-paciente-endereco.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,10 @@
     <link rel="stylesheet" href="../css/Styles/tela-paciente-sobre.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Rubik:wght@300..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Rubik:wght@300..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <a href="../index.html" class="logo">
         <img src="../images/logo.png" alt="logo">
@@ -20,8 +23,8 @@
         </div>
     </div>
     <div id="dropdownMenu" class="dropdown-content">
-        <a href="#">Perfil</a>
-        <a href="#">Adicionar Dependente</a>
+        <a href="./perfil-paciente.html">Perfil</a>
+        <a href="./adicionar-dependente.html">Adicionar Dependente</a>
         <a href="../index.html">Sair</a>
     </div>
     <script>
@@ -31,7 +34,7 @@
         }
 
         // Fecha o menu se o usuário clicar fora dele
-        window.onclick = function(event) {
+        window.onclick = function (event) {
             if (!event.target.matches('#menu') && !event.target.matches('.usuario img')) {
                 const dropdowns = document.getElementsByClassName("dropdown-content");
                 for (let i = 0; i < dropdowns.length; i++) {
@@ -52,18 +55,29 @@
         <img src="../images/logo-clinica.jpg" alt="Logo Clinica">
     </a>
     <div class="container">
-        </div>
-        <div class="cabecalho-text">
-            <a href="./tala-paciente-profissional.html"><h1>Profissionais</h1></a>
-            <span>  </span>
-            <a href="./tala-paciente-endereco.html"><h1>Endereço</h1></a>
-            <span>  </span>
-            <a href="./tala-paciente-sobre.html"><h1>Sobre</h1></a>
-        </div>
-        <div class="quadrado-cinza"></div>
-        <div class="texto"><h1>Av. Pedro Adams Filho, 3436 - Pátria Nova, Novo Hamburgo - RS, 93410-038.<br /><br /> Telefone: (51) 99696-6509. E-mail: contato@clinica médica.com.br <br /><br />Horário de funcionamento: de segunda a sexta das 8:30h as 11:30h e das 13:30h. as 17:30h.
-        </h1></div>
+    </div>
+    <div class="cabecalho-text">
+        <a href="./tala-paciente-profissional.html">
+            <h1>Profissionais</h1>
+        </a>
+        <span> </span>
+        <a href="./tala-paciente-endereco.html">
+            <h1>Endereço</h1>
+        </a>
+        <span> </span>
+        <a href="./tala-paciente-sobre.html">
+            <h1>Sobre</h1>
+        </a>
+    </div>
+    <div class="quadrado-cinza"></div>
+    <div class="texto">
+        <h1>Av. Pedro Adams Filho, 3436 - Pátria Nova, Novo Hamburgo - RS, 93410-038.<br /><br /> Telefone: (51)
+            99696-6509. E-mail: contato@clinica médica.com.br <br /><br />Horário de funcionamento: de segunda a sexta
+            das 8:30h as 11:30h e das 13:30h. as 17:30h.
+        </h1>
+    </div>
     </div>
 
 </body>
+
 </html>
