--- a/html/tala-paciente-profissional.html
+++ b/html/tala-paciente-profissional.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,10 @@
     <link rel="stylesheet" href="../css/Styles/tela-paciente-profissional.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Rubik:wght@300..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Rubik:wght@300..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <a href="../index.html" class="logo">
         <img src="../images/logo.png" alt="logo">
@@ -20,8 +23,8 @@
         </div>
     </div>
     <div id="dropdownMenu" class="dropdown-content">
-        <a href="#">Perfil</a>
-        <a href="#">Adicionar Dependente</a>
+        <a href="./perfil-paciente.html">Perfil</a>
+        <a href="./adicionar-dependente.html">Adicionar Dependente</a>
         <a href="../index.html">Sair</a>
     </div>
     <script>
@@ -31,7 +34,7 @@
         }
 
         // Fecha o menu se o usuário clicar fora dele
-        window.onclick = function(event) {
+        window.onclick = function (event) {
             if (!event.target.matches('#menu') && !event.target.matches('.usuario img')) {
                 const dropdowns = document.getElementsByClassName("dropdown-content");
                 for (let i = 0; i < dropdowns.length; i++) {
@@ -67,55 +70,106 @@
         <img src="../images/img-dr.png" alt="">
     </div>
     <div class="container">
-        </div>
-        <div class="cabecalho-text">
-            <a href="./tala-paciente-profissional.html"><h1>Profissionais</h1></a>
-            <span>  </span>
-            <a href="./tala-paciente-endereco.html"><h1>Endereço</h1></a>
-            <span>  </span>
-            <a href="./tala-paciente-sobre.html"><h1>Sobre</h1></a>
-        </div>
-        <div class="nome-medico-1"><h2>Dra. Luana</h2></div>
-        <div class="linha-cinza5"></div>
-        <div class="especialidade-1"><h1>Oncologista</h1></div>
-        <div class="crm-1"><h1>CRM: 56858</h1></div>
-        <div class="rqe-1"><h1>RQE: 3645</h1></div>
-        <div class="quadrado-cinza-1"></div>
-        <div class="dec-md-1"><h3>Faculdade de Medicina: Universidade Estadual de Porto alegre, graduada em 2004 com Honras Médicas. Atuou nos Hospitais: Unimed de Novo Hamburgo e Regina de Novo Hamburgo.
-        </h3></div>
-        <a href="./agendamento-md-1.html" class="agenda-1">
-            <img src="../images/relogio.png" alt="Agenda Médico 1">
+    </div>
+    <div class="cabecalho-text">
+        <a href="./tala-paciente-profissional.html">
+            <h1>Profissionais</h1>
         </a>
-        <div class="nome-medico-2"><h2>Dr. Albano</h2></div>
-        <div class="linha-cinza6"></div>
-        <div class="especialidade-2"><h1>Neurologista</h1></div>
-        <div class="crm-2"><h1>CRM: 65455</h1></div>
-        <div class="rqe-2"><h1>RQE: 8945</h1></div>
-        <div class="quadrado-cinza-2"></div>
-        <div class="dec-md-2"><h3>Faculdade de Medicina: Universidade Estadual de Porto alegre, graduada em 2004 com Honras Médicas. Atuou nos Hospitais: Unimed de Novo Hamburgo e Regina de Novo Hamburgo.</h3></div>
-        <a href="./agendamento-md-1.html" class="agenda-2">
-            <img src="../images/relogio.png" alt="Agenda Médico 2">
+        <span> </span>
+        <a href="./tala-paciente-endereco.html">
+            <h1>Endereço</h1>
         </a>
-        <div class="nome-medico-3"><h2>Dr. Lucas</h2></div>
-        <div class="linha-cinza7"></div>
-        <div class="especialidade-3"><h1>Urologista</h1></div>
-        <div class="crm-3"><h1>CRM: 65879</h1></div>
-        <div class="rqe-3"><h1>RQE: 6541</h1></div>
-        <div class="quadrado-cinza-3"></div>
-        <div class="dec-md-3"><h3>Faculdade de Medicina: Universidade Estadual de Porto alegre, graduada em 2004 com Honras Médicas. Atuou nos Hospitais: Unimed de Novo Hamburgo e Regina de Novo Hamburgo.</h3></div>
-        <a href="./agendamento-md-1.html" class="agenda-3">
-            <img src="../images/relogio.png" alt="Agenda Médico 3">
-        </a>
-        <div class="nome-medico-4"><h2>Dra. Ivanir</h2></div>
-        <div class="especialidade-4"><h1>Cardiologista</h1></div>
-        <div class="linha-cinza8"></div>
-        <div class="crm-4"><h1>CRM: 12548</h1></div>
-        <div class="rqe-4"><h1>RQE: 3574</h1></div>
-        <div class="quadrado-cinza-4"></div>
-        <div class="dec-md-4"><h3>Faculdade de Medicina: Universidade Estadual de Porto alegre, graduada em 2004 com Honras Médicas. Atuou nos Hospitais: Unimed de Novo Hamburgo e Regina de Novo Hamburgo.</h3></div>
-        <a href="./agendamento-md-1.html" class="agenda-4">
-            <img src="../images/relogio.png" alt="Agenda Médico 4">
+        <span> </span>
+        <a href="./tala-paciente-sobre.html">
+            <h1>Sobre</h1>
         </a>
     </div>
+    <div class="nome-medico-1">
+        <h2>Dra. Luana</h2>
+    </div>
+    <div class="linha-cinza5"></div>
+    <div class="especialidade-1">
+        <h1>Oncologista</h1>
+    </div>
+    <div class="crm-1">
+        <h1>CRM: 56858</h1>
+    </div>
+    <div class="rqe-1">
+        <h1>RQE: 3645</h1>
+    </div>
+    <div class="quadrado-cinza-1"></div>
+    <div class="dec-md-1">
+        <h3>Faculdade de Medicina: Universidade Estadual de Porto alegre, graduada em 2004 com Honras Médicas. Atuou nos
+            Hospitais: Unimed de Novo Hamburgo e Regina de Novo Hamburgo.
+        </h3>
+    </div>
+    <a href="./agendamento-md-1.html" class="agenda-1">
+        <img src="../images/relogio.png" alt="Agenda Médico 1">
+    </a>
+    <div class="nome-medico-2">
+        <h2>Dr. Albano</h2>
+    </div>
+    <div class="linha-cinza6"></div>
+    <div class="especialidade-2">
+        <h1>Neurologista</h1>
+    </div>
+    <div class="crm-2">
+        <h1>CRM: 65455</h1>
+    </div>
+    <div class="rqe-2">
+        <h1>RQE: 8945</h1>
+    </div>
+    <div class="quadrado-cinza-2"></div>
+    <div class="dec-md-2">
+        <h3>Faculdade de Medicina: Universidade Estadual de Porto alegre, graduada em 2004 com Honras Médicas. Atuou nos
+            Hospitais: Unimed de Novo Hamburgo e Regina de Novo Hamburgo.</h3>
+    </div>
+    <a href="./agendamento-md-1.html" class="agenda-2">
+        <img src="../images/relogio.png" alt="Agenda Médico 2">
+    </a>
+    <div class="nome-medico-3">
+        <h2>Dr. Lucas</h2>
+    </div>
+    <div class="linha-cinza7"></div>
+    <div class="especialidade-3">
+        <h1>Urologista</h1>
+    </div>
+    <div class="crm-3">
+        <h1>CRM: 65879</h1>
+    </div>
+    <div class="rqe-3">
+        <h1>RQE: 6541</h1>
+    </div>
+    <div class="quadrado-cinza-3"></div>
+    <div class="dec-md-3">
+        <h3>Faculdade de Medicina: Universidade Estadual de Porto alegre, graduada em 2004 com Honras Médicas. Atuou nos
+            Hospitais: Unimed de Novo Hamburgo e Regina de Novo Hamburgo.</h3>
+    </div>
+    <a href="./agendamento-md-1.html" class="agenda-3">
+        <img src="../images/relogio.png" alt="Agenda Médico 3">
+    </a>
+    <div class="nome-medico-4">
+        <h2>Dra. Ivanir</h2>
+    </div>
+    <div class="especialidade-4">
+        <h1>Cardiologista</h1>
+    </div>
+    <div class="linha-cinza8"></div>
+    <div class="crm-4">
+        <h1>CRM: 12548</h1>
+    </div>
+    <div class="rqe-4">
+        <h1>RQE: 3574</h1>
+    </div>
+    <div class="quadrado-cinza-4"></div>
+    <div class="dec-md-4">
+        <h3>Faculdade de Medicina: Universidade Estadual de Porto alegre, graduada em 2004 com Honras Médicas. Atuou nos
+            Hospitais: Unimed de Novo Hamburgo e Regina de Novo Hamburgo.</h3>
+    </div>
+    <a href="./agendamento-md-1.html" class="agenda-4">
+        <img src="../images/relogio.png" alt="Agenda Médico 4">
+    </a>
+    </div>
 </body>
+
 </html>
