--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <a href="./html/login-paciente.html" class="button">Paciente</a>
         </div>
     </div>
-    <a href="../index.html" class="logo">
-        <img src="../images/logo.png" alt="logo">
+    <a href="./index.html" class="logo">
+        <img src="./images/logo.png" alt="logo">
     </a>
 </body>
 
